# Three-Hits

./: .gitignore  CMakeLists.txt  README.md  build.bat  can_i_surf_.level  compile.bat  level0.blend  levels_list.txt  main.c  physics_stress_test.level  shader.vert  test_1.level  test_2.level  test_3.level  todo.txt  util.h  vert.spv  viking_room.level  vmmath.h
data/levels/: cube.level  doors0.level  doors1.level  movement_test.level  physics_stress_test.level  plane.level  test_0.level  test_1.level  test_2.level  test_3.level
data/models/: level0.mtl
final/: levels_list.txt
final/data/blend/: doors0.blend  doors0.blend1  doors1.blend  doors1.blend1
final/data/levels/: doors0.level
final/data/shaders/: crosshair.frag.spv  crosshair.vert.spv  enemy.frag.spv  enemy.vert.spv  entity.frag.spv  entity.vert.spv  healthbar.vert.spv  hudelement.frag.spv  hudelement.vert.spv  level.frag.spv  level.vert.spv  transition.frag.spv
glfw-3.3.4/docs/html/: dynsections.js  jquery.js
glfw-3.3.4/docs/html/search/: search.js
level_compactor/: CMakeLists.txt  README.md  main.cpp  util.h  vmmath.h
lib/: stb_image.h
lib/glfw-3.3.4/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
lib/glfw-3.3.4/docs/: extra.scss
lib/glfw-3.3.4/docs/html/: bug.html  build_guide.html  compile_guide.html  context_guide.html  deprecated.html  group__context.html  group__errors.html  group__init.html  group__input.html  group__monitor.html  group__native.html  group__vulkan.html  group__window.html  input_guide.html  jquery.js  monitor_guide.html  moving_guide.html  news.html  quick_guide.html  structGLFWgamepadstate.html  structGLFWgammaramp.html  structGLFWimage.html  (+2 more)
lib/glfw-3.3.4/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc
lib/glm/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  glm.sln
lib/glm/glm/: INSTALL.vcxproj  INSTALL.vcxproj.filters
lib/openal-soft/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  OpenAL.sln  OpenAL.vcxproj  OpenAL.vcxproj.filters  OpenALTargets.cmake  alrecord.vcxproj  alrecord.vcxproj.filters  altonegen.vcxproj  altonegen.vcxproj.filters  cmake_install.cmake  common.vcxproj  common.vcxproj.filters  config.h  ex-common.vcxproj  ex-common.vcxproj.filters  openal-info.vcxproj  openal-info.vcxproj.filters  openal.pc
lib/openal-soft/examples/: altonegen.c
lib/tinyobjloader/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  tinyobjloader-config-version.cmake  tinyobjloader-targets.cmake  tinyobjloader.pc  tinyobjloader.sln  tinyobjloader.vcxproj  tinyobjloader.vcxproj.filters
src/: alutil.h  crosshair.frag  crosshair.vert  door.frag  door.vert  enemy.frag  enemy.vert  entity.frag  entity.vert  hudelement.frag  hudelement.vert  init.h  input.h  level.frag  level.vert  load.h  main.c  physics.h  shader.frag  shader.vert  state.h  transition.frag  update.h  util.h  vkutil.h  vmmath.h
(+6 files in other folders)
